--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,38 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.test.demo"
-      android:versionCode="1"
-      android:versionName="1.0">
+    package="com.test.demo"
+    android:versionCode="1"
+    android:versionName="1.0">
 
 
-    <uses-permission android:name="android.permission.CAPTURE_AUDIO_OUTPUT"/>
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CAPTURE_AUDIO_OUTPUT" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_LOGS"/>
+    <uses-permission android:name="android.permission.READ_LOGS" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
 
 
-
-
-
-    <application android:icon="@drawable/icon" android:label="@string/app_name"
-        android:theme="@style/Theme.AppCompat.NoActionBar"
-        android:name="com.MyApplicaton">
-        <activity android:name=".DemoActivity"
-                  android:label="@string/app_name"
-            android:screenOrientation="landscape"
-            >
+    <application
+        android:name="com.MyApplicaton"
+        android:icon="@drawable/icon"
+        android:label="@string/app_name"
+        android:theme="@style/Theme.AppCompat.NoActionBar">
+        <activity
+            android:name=".DemoActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".TestActivity" >
-        </activity>
+        <activity android:name=".TestActivity"></activity>
     </application>
-    
-    <uses-permission android:name="android.permission.INTERNET"/>
-	
+
+
 </manifest>
